data/derived/comb/progs/unify/prog0493.ml.out
Characters 65-66:
  | h::t -> sum(t, h ^ y);;
                   ^
Error: This expression has type int but an expression was expected of type
         string
